// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <DocumentsDetailReferral /> should renders with props correctly 1`] = `
<div
  className="form"
>
  <div
    className="form-group-wrapper"
  >
    <div
      className="row-expand"
    >
      <div
        className="col-expand-left"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Document Name
          </label>
          <div
            className="form-control-static"
          />
        </div>
      </div>
      <div
        className="col-expand-right"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Document Date
          </label>
          <div
            className="form-control-static"
          >
            01-Jan-2017
          </div>
        </div>
      </div>
    </div>
    <div
      className="row-expand"
    >
      <div
        className="col-expand-left"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Author
          </label>
          <div
            className="form-control-static"
          />
        </div>
      </div>
    </div>
    <FormSectionList
      title="Facility"
    >
      <FormSection
        isAccordion={false}
        isBordered={false}
        isImportBtn={false}
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Name
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Provide ID
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
    <FormSectionList
      title="Referral"
    >
      <FormSection
        isAccordion={false}
        isBordered={false}
        isImportBtn={false}
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Date
                </label>
                <div
                  className="form-control-static"
                >
                  01-Jan-2017
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Type
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Priority
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Ref
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  From
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  To
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Comments
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
    <FormSectionList
      title="Organisation/Provide"
    >
      <FormSection
        isAccordion={false}
        isBordered={false}
        isImportBtn={false}
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Name
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  ID
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Work Phone
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Emergency Phone
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Email
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
    <FormSectionList
      title="Referral Status"
    >
      <FormSection
        isAccordion={false}
        isBordered={false}
        isImportBtn={false}
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Status
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Original Code
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Code
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
    <FormSectionList
      title="Clinical Synopsis"
    >
      <FormSection
        isAccordion={false}
        isBordered={false}
        isImportBtn={false}
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Narrative
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Present Illness
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Comments
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Previous Hospital
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
    <div
      className="row-expand"
    >
      <div
        className="col-expand-left"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Medication Anticoagulation Use
          </label>
          <div
            className="form-control-static"
          />
        </div>
      </div>
    </div>
    <div
      className="row-expand"
    >
      <div
        className="col-expand-left"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Tobacco Use
          </label>
          <div
            className="form-control-static"
          />
        </div>
      </div>
      <div
        className="col-expand-right"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Alcohol Use
          </label>
          <div
            className="form-control-static"
          />
        </div>
      </div>
    </div>
    <div
      className="row-expand"
    >
      <div
        className="col-expand-left"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Physical Impairment
          </label>
          <div
            className="form-control-static"
          />
        </div>
      </div>
    </div>
    <FormSectionList
      title="Measurements"
    >
      <FormSection
        isAccordion={false}
        isBordered={false}
        isImportBtn={false}
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Systolic BP
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Systolic BP Units
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Diastolic BP
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Diastolic BP Units
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Pulse
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Pulse Units
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Height
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Height Units
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Weight
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Weight Units
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Body Mass
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Body Mass Units
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
    <div
      className="row-expand"
    >
      <div
        className="col-expand-left"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Other Examination Findings
          </label>
          <div
            className="form-control-static"
          />
        </div>
      </div>
      <div
        className="col-expand-right"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Original Source
          </label>
          <div
            className="form-control-static"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="row-expand"
  >
    <div
      className="col-expand-left"
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Source
        </label>
        <div
          className="form-control-static"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <DocumentsDetailReferral /> should renders with props correctly 2`] = `
<div
  className="form"
>
  <div
    className="form-group-wrapper"
  >
    <div
      className="row-expand"
    >
      <div
        className="col-expand-left"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Document Name
          </label>
          <div
            className="form-control-static"
          >
            composerName
          </div>
        </div>
      </div>
      <div
        className="col-expand-right"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Document Date
          </label>
          <div
            className="form-control-static"
          >
            01-Jan-2017
          </div>
        </div>
      </div>
    </div>
    <div
      className="row-expand"
    >
      <div
        className="col-expand-left"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Author
          </label>
          <div
            className="form-control-static"
          >
            author_name
          </div>
        </div>
      </div>
    </div>
    <FormSectionList
      title="Facility"
    >
      <FormSection
        isAccordion={false}
        isBordered={false}
        isImportBtn={false}
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Name
                </label>
                <div
                  className="form-control-static"
                >
                  facility
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Provide ID
                </label>
                <div
                  className="form-control-static"
                >
                  156
                </div>
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
    <FormSectionList
      title="Referral"
    >
      <FormSection
        isAccordion={false}
        isBordered={false}
        isImportBtn={false}
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Date
                </label>
                <div
                  className="form-control-static"
                >
                  01-Jan-2017
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Type
                </label>
                <div
                  className="form-control-static"
                >
                  referralType
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Priority
                </label>
                <div
                  className="form-control-static"
                >
                  referralStatus_value
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Ref
                </label>
                <div
                  className="form-control-static"
                >
                  referralReferenceNumber
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  From
                </label>
                <div
                  className="form-control-static"
                >
                  referredFrom
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  To
                </label>
                <div
                  className="form-control-static"
                >
                  referredTo
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Comments
                </label>
                <div
                  className="form-control-static"
                >
                  referralComments
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Comments
                </label>
                <div
                  className="form-control-static"
                  key="0"
                >
                  1
                </div>
                <div
                  className="form-control-static"
                  key="1"
                >
                  2
                </div>
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
    <FormSectionList
      title="Organisation/Provide"
    >
      <FormSection
        isAccordion={false}
        isBordered={false}
        isImportBtn={false}
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Name
                </label>
                <div
                  className="form-control-static"
                >
                  providerContact_organisationName
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  ID
                </label>
                <div
                  className="form-control-static"
                >
                  156
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Work Phone
                </label>
                <div
                  className="form-control-static"
                >
                  providerContact_workNumber
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Emergency Phone
                </label>
                <div
                  className="form-control-static"
                >
                  providerContact_emergencyNumber
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Email
                </label>
                <div
                  className="form-control-static"
                >
                  providerContact_email
                </div>
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
    <FormSectionList
      title="Referral Status"
    >
      <FormSection
        isAccordion={false}
        isBordered={false}
        isImportBtn={false}
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Status
                </label>
                <div
                  className="form-control-static"
                >
                  referralStatus_value
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Original Code
                </label>
                <div
                  className="form-control-static"
                >
                  referralStatus_originalCode
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Code
                </label>
                <div
                  className="form-control-static"
                >
                  referralStatus_code
                </div>
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
    <FormSectionList
      title="Clinical Synopsis"
    >
      <FormSection
        isAccordion={false}
        isBordered={false}
        isImportBtn={false}
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Narrative
                </label>
                <div
                  className="form-control-static"
                >
                  clinicalNarrative
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Present Illness
                </label>
                <div
                  className="form-control-static"
                >
                  presentIllness
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Comments
                </label>
                <div
                  className="form-control-static"
                >
                  clinicalSynopsisComments
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Previous Hospital
                </label>
                <div
                  className="form-control-static"
                >
                  previousHospitalAttendance
                </div>
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
    <FormSectionList
      title="Past Illness"
    >
      <FormSection
        isAccordion={false}
        isBordered={false}
        isImportBtn={false}
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Hypertension
                </label>
                <div
                  className="form-control-static form-control-static--item row"
                  key="0"
                >
                  <label
                    className="control-label col-lg-4"
                  >
                    1
                    :
                  </label>
                  <div
                    className="col-lg-8"
                  >
                    <div
                      className="form-control-static"
                    >
                      01-Jan-2017
                    </div>
                  </div>
                </div>
                <div
                  className="form-control-static form-control-static--item row"
                  key="1"
                >
                  <label
                    className="control-label col-lg-4"
                  >
                    2
                    :
                  </label>
                  <div
                    className="col-lg-8"
                  >
                    <div
                      className="form-control-static"
                    >
                      01-Jan-2017
                    </div>
                  </div>
                </div>
                <div
                  className="form-control-static form-control-static--item row"
                  key="2"
                >
                  <label
                    className="control-label col-lg-4"
                  >
                    3
                    :
                  </label>
                  <div
                    className="col-lg-8"
                  >
                    <div
                      className="form-control-static"
                    >
                      01-Jan-2017
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
    <FormSectionList
      title="Surgical Procedures"
    >
      <FormSection
        isAccordion={false}
        isBordered={false}
        isImportBtn={false}
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Hypertension
                </label>
                <div
                  className="form-control-static form-control-static--item row"
                  key="0"
                >
                  <label
                    className="control-label col-lg-4"
                  >
                    1
                    :
                  </label>
                  <div
                    className="col-lg-8"
                  >
                    <div
                      className="form-control-static"
                    >
                      01-Jan-2017
                    </div>
                  </div>
                </div>
                <div
                  className="form-control-static form-control-static--item row"
                  key="1"
                >
                  <label
                    className="control-label col-lg-4"
                  >
                    2
                    :
                  </label>
                  <div
                    className="col-lg-8"
                  >
                    <div
                      className="form-control-static"
                    >
                      01-Jan-2017
                    </div>
                  </div>
                </div>
                <div
                  className="form-control-static form-control-static--item row"
                  key="2"
                >
                  <label
                    className="control-label col-lg-4"
                  >
                    3
                    :
                  </label>
                  <div
                    className="col-lg-8"
                  >
                    <div
                      className="form-control-static"
                    >
                      01-Jan-2017
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
    <FormSectionList
      title="Medications"
    >
      <div>
        <FormSection
          isAccordion={true}
          isBordered={true}
          isImportBtn={true}
          key="0"
          theme="primary"
          title="Name: name"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Name
                  </label>
                  <div
                    className="form-control-static"
                  >
                    name
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Start Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    01-Jan-2017
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Start Time
                  </label>
                  <div
                    className="form-control-static"
                  >
                    01-Jan-2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Dose Amount
                  </label>
                  <div
                    className="form-control-static"
                  >
                    doseAmount
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Dose Directions
                  </label>
                  <div
                    className="form-control-static"
                  >
                    doseDirections
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Dose Timing
                  </label>
                  <div
                    className="form-control-static"
                  >
                    doseTiming
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Route
                  </label>
                  <div
                    className="form-control-static"
                  >
                    route
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Terminology
                  </label>
                  <div
                    className="form-control-static"
                  >
                    termonology
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Code
                  </label>
                  <div
                    className="form-control-static"
                  >
                    code
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Author
                  </label>
                  <div
                    className="form-control-static"
                  >
                    author_name
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    01-Jan-2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Source
                  </label>
                  <div
                    className="form-control-static"
                  >
                    source
                  </div>
                </div>
              </div>
            </div>
          </div>
        </FormSection>
      </div>
    </FormSectionList>
    <div
      className="row-expand"
    >
      <div
        className="col-expand-left"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Medication Anticoagulation Use
          </label>
          <div
            className="form-control-static"
          >
            medication_anticoagulation_use
          </div>
        </div>
      </div>
    </div>
    <FormSectionList
      title="Allergies"
    >
      <FormSection
        isAccordion={true}
        isBordered={true}
        isImportBtn={true}
        key="0"
        theme="primary"
        title="Cause: testName"
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Cause
                </label>
                <div
                  className="form-control-static"
                >
                  testName
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Cause
                </label>
                <div
                  className="form-control-static"
                >
                  status
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Cause Code
                </label>
                <div
                  className="form-control-static"
                >
                  01-Jan-2017
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Reaction
                </label>
                <div
                  className="form-control-static"
                >
                  conclusion
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Terminology
                </label>
                <div
                  className="form-control-static"
                >
                  conclusion
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Terminology Code
                </label>
                <div
                  className="form-control-static"
                >
                  author
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Author
                </label>
                <div
                  className="form-control-static"
                >
                  01-Jan-2017
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Date
                </label>
                <div
                  className="form-control-static"
                >
                  source
                </div>
              </div>
            </div>
          </div>
        </div>
      </FormSection>
      <FormSection
        isAccordion={true}
        isBordered={true}
        isImportBtn={true}
        key="1"
        theme="primary"
        title="Cause: testName"
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Cause
                </label>
                <div
                  className="form-control-static"
                >
                  testName
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Cause
                </label>
                <div
                  className="form-control-static"
                >
                  status
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Cause Code
                </label>
                <div
                  className="form-control-static"
                >
                  01-Jan-2017
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Reaction
                </label>
                <div
                  className="form-control-static"
                >
                  conclusion
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Terminology
                </label>
                <div
                  className="form-control-static"
                >
                  conclusion
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Terminology Code
                </label>
                <div
                  className="form-control-static"
                >
                  author
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Author
                </label>
                <div
                  className="form-control-static"
                >
                  01-Jan-2017
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Date
                </label>
                <div
                  className="form-control-static"
                >
                  source
                </div>
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
    <div
      className="row-expand"
    >
      <div
        className="col-expand-left"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Tobacco Use
          </label>
          <div
            className="form-control-static"
          >
            tobaccoUse
          </div>
        </div>
      </div>
      <div
        className="col-expand-right"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Alcohol Use
          </label>
          <div
            className="form-control-static"
          >
            alcoholUse
          </div>
        </div>
      </div>
    </div>
    <div
      className="row-expand"
    >
      <div
        className="col-expand-left"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Physical Impairment
          </label>
          <div
            className="form-control-static"
          >
            physicalImparement
          </div>
        </div>
      </div>
    </div>
    <FormSectionList
      title="Measurements"
    >
      <FormSection
        isAccordion={false}
        isBordered={false}
        isImportBtn={false}
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Systolic BP
                </label>
                <div
                  className="form-control-static"
                >
                  systolicBP
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Systolic BP Units
                </label>
                <div
                  className="form-control-static"
                >
                  systolicBP_units
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Diastolic BP
                </label>
                <div
                  className="form-control-static"
                >
                  diastolicBP
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Diastolic BP Units
                </label>
                <div
                  className="form-control-static"
                >
                  diastolicBP_units
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Pulse
                </label>
                <div
                  className="form-control-static"
                >
                  pulse
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Pulse Units
                </label>
                <div
                  className="form-control-static"
                >
                  pulse_units
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Height
                </label>
                <div
                  className="form-control-static"
                >
                  height
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Height Units
                </label>
                <div
                  className="form-control-static"
                >
                  height_units
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Weight
                </label>
                <div
                  className="form-control-static"
                >
                  weight
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Weight Units
                </label>
                <div
                  className="form-control-static"
                >
                  weight_units
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Body Mass
                </label>
                <div
                  className="form-control-static"
                >
                  bodyMass
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Body Mass Units
                </label>
                <div
                  className="form-control-static"
                >
                  bodyMass_units
                </div>
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
    <div
      className="row-expand"
    >
      <div
        className="col-expand-left"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Other Examination Findings
          </label>
          <div
            className="form-control-static"
          >
            otherExaminationFindings
          </div>
        </div>
      </div>
      <div
        className="col-expand-right"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Original Source
          </label>
          <div
            className="form-control-static"
          >
            documentOriginalSource
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row-expand"
  >
    <div
      className="col-expand-left"
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Source
        </label>
        <div
          className="form-control-static"
        >
          source
        </div>
      </div>
    </div>
  </div>
</div>
`;
